--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "injectable",
-  "version": "0.0.1",
+  "name": "injectable.js",
+  "version": "0.0.2",
   "description": "extendable IOC container",
   "main": "index.js",
   "repository": "git@github.com:ron-liu/injectable.git",
