--- a/packages/injectable-core/package.json
+++ b/packages/injectable-core/package.json
@@ -27,5 +27,8 @@
     "babel-preset-stage-1": "^6.24.1",
     "jest": "^20.0.4",
     "jest-babel": "^1.0.1"
+  },
+  "babel": {
+    "presets": ["es2015", "stage-1", "flow"]
   }
 }
