--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: node_js
 node_js:
   - stable
 
-install:
-  - lerna bootstrap
+#install:
+#  - lerna bootstrap
+
+env:
+  - PACKAGE=injectable-core
 
 script:
-  - lerna run test
+  - lerna run test --scope $PACKAGE
