--- a/packages/injectable-core/package.json
+++ b/packages/injectable-core/package.json
@@ -25,10 +25,17 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-1": "^6.24.1",
+    "express": "^4.15.4",
     "jest": "^20.0.4",
-    "jest-babel": "^1.0.1"
+    "jest-babel": "^1.0.1",
+    "supertest-as-promised": "^4.0.2",
+    "supertest": "^3.0.0"
   },
   "babel": {
-    "presets": ["es2015", "stage-1", "flow"]
+    "presets": [
+      "es2015",
+      "stage-1",
+      "flow"
+    ]
   }
 }
