--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
-	"devDependencies": {
-		"lerna": "^2.1.1"
-	}
+  "devDependencies": {
+    "lerna": "^2.1.1",
+    "jest": "^20.0.4",
+    "jest-babel": "^1.0.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-1": "^6.24.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-1",
+      "flow"
+    ]
+  }
+
 }
