--- a/packages/injectable-core/package.json
+++ b/packages/injectable-core/package.json
@@ -2,19 +2,16 @@
   "name": "injectable-core",
   "version": "0.0.3",
   "description": "extendable IOC container",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:ron-liu/injectable.git",
   "author": "ronliu <ronliu2k@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "npm run build",
+    "build": "babel src --ignore __tests__ --out-dir dist/ ; cp src/index.js dist/index.js.flow;"
   },
-  "jest": {
-    "verbose": true,
-    "testMatch": [
-      "**/__tests__/*.spec.js"
-    ]
-  },
+
   "dependencies": {
     "glob": "^7.1.2",
     "invariant": "^2.2.2",
@@ -25,17 +22,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-1": "^6.24.1",
-    "express": "^4.15.4",
     "jest": "^20.0.4",
-    "jest-babel": "^1.0.1",
-    "supertest-as-promised": "^4.0.2",
-    "supertest": "^3.0.0"
+    "jest-babel": "^1.0.1"
   },
   "babel": {
     "presets": [
       "es2015",
       "stage-1",
       "flow"
+    ]
+  },
+  "jest": {
+    "verbose": true,
+    "testMatch": [
+      "**/__tests__/*.spec.js"
     ]
   }
 }
