--- a/packages/injectable-plugin-perRequest/package.json
+++ b/packages/injectable-plugin-perRequest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "injectable-plugin-perrequest",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "repository": "git@github.com:ron-liu/injectable.git",
@@ -8,24 +8,24 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "injectable-core": "^0.0.3"
+    "injectable-core": "^0.0.4"
   },
   "author": "Ron Liu <ronliu2k@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "injectable-core": "0.0.3",
+    "injectable-core": "^0.0.4",
     "ramda": "^0.24.1"
   },
   "devDependencies": {
-    "jest": "^20.0.4",
-    "jest-babel": "^1.0.1",
-    "express": "^4.15.4",
-    "supertest-as-promised": "^4.0.2",
-    "supertest": "^3.0.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-1": "^6.24.1"
+    "babel-preset-stage-1": "^6.24.1",
+    "express": "^4.15.4",
+    "jest": "^20.0.4",
+    "jest-babel": "^1.0.1",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2"
   },
   "babel": {
     "presets": [
